<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        style="@style/view1"
        android:background="@color/blue"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </View>


    <ImageView
        android:id="@+id/imageView"
        style="@style/leftarrow"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/textView"
        style="@style/Login"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView">

    </TextView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_100"
        android:orientation="vertical"

        app:layout_constraintStart_toStartOf="@id/view">

        <EditText
            style="@style/edittext"
            android:hint="@string/hint1">


        </EditText>

        <EditText
            style="@style/edittext"
            android:hint="@string/hint2">


        </EditText>

        <TextView
            style="@style/Login"
            android:layout_gravity="center"
            android:text="@string/usephone"
            android:textColor="@color/blue">

        </TextView>

        <Button
            style="@style/button"
            android:text="@string/ligin">

        </Button>

        <TextView
            style="@style/Login"
            android:layout_gravity="center"
            android:text="@string/forgotpass"
            android:textColor="@color/black">

        </TextView>


    </LinearLayout>

    <TextView
        android:id="@+id/or"
        style="@style/Login"
        android:text="@string/or"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/dp_502" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <Button
            style="@style/button"

            android:background="#3B5998"
            android:drawableLeft="@drawable/facebook"
            android:text="@string/FACEBOOK"

            >

        </Button>

    </RelativeLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/dp_584" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/guideline3">

        <Button
            style="@style/button"
            android:background="@color/white"

            android:drawableLeft="@drawable/ic_flat_color_icons_google"
            android:text="@string/google"

            >

        </Button>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


